updates to project images

--- a/work.cs.html
+++ b/work.cs.html
@@ -72,79 +72,76 @@
     </nav>
 
     <div class="row">
-        <!--item start-->     <!--arch/cs-->
-        <div class="col-md-4 portfolio-item">
-          <div class="hover-bg"> <a href="campsite_gen.html"  data-lightbox-gallery="gallery1">
-            <div class="hover-text">
-              <div class="overlay-caption">
-                <div class="overlay-content">
-                  <h3>Campsite Generator</h3>
-                </div>
+      <!--item start-->     <!--arch/cs-->
+      <div class="col-md-4 portfolio-item">
+        <div class="hover-bg"> <a href="campsite_gen.html"  data-lightbox-gallery="gallery1">
+          <div class="hover-text">
+            <div class="overlay-caption">
+              <div class="overlay-content">
+                <h3>Campsite Generator</h3>
               </div>
             </div>
-            <img src="images/projects/nomad_campsite/EstacionDeltaSite10C.png" class="img-responsive imclip" alt=""></a>
           </div>
+          <img src="images/projects/nomad_campsite/EstacionDeltaSite10C.png" class="img-responsive imclip" alt=""></a>
         </div>
-        <!--item end-->
-        <!--item start-->     <!--cs-->
-        <div class="col-md-4 portfolio-item">
-          <div class="hover-bg"> <a href="parallax.html"  data-lightbox-gallery="gallery1">
-            <div class="hover-text">
-              <div class="overlay-caption">
-                <div class="overlay-content">
-                  <h3>Extended Reality</h3>
-                </div>
+      </div>
+      <!--item end-->
+      <!--item start-->     <!--cs-->
+      <div class="col-md-4 portfolio-item">
+        <div class="hover-bg"> <a href="parallax.html"  data-lightbox-gallery="gallery1">
+          <div class="hover-text">
+            <div class="overlay-caption">
+              <div class="overlay-content">
+                <h3>Extended Reality</h3>
               </div>
             </div>
-            <img src="images/projects/parallax/still.png" class="img-responsive imclip" alt=""></a>
           </div>
+          <img src="images/projects/parallax/still.png" class="img-responsive imclip" alt=""></a>
         </div>
-        <!--item end-->
-        <!--item start-->     <!--cs/eng-->
-        <div class="col-md-4 portfolio-item">
-          <div class="hover-bg"> <a href="machine_learning.html"  data-lightbox-gallery="gallery1">
-            <div class="hover-text">
-              <div class="overlay-caption">
-                <div class="overlay-content">
-                  <h3>Machine Learning</h3>
-                </div>
+      </div>
+      <!--item end-->
+      <!--item start-->     <!--cs/eng-->
+      <div class="col-md-4 portfolio-item">
+        <div class="hover-bg"> <a href="melanoma.html"  data-lightbox-gallery="gallery1">
+          <div class="hover-text">
+            <div class="overlay-caption">
+              <div class="overlay-content">
+                <h3>Melanoma Research</h3>
               </div>
             </div>
-            <img src="images/projects/machine_learning/07_96_2470_gt.jpg" class="img-responsive imclip" alt=""></a>
           </div>
+          <img src="images/projects/melanoma/07_96_2470_gt.jpg" class="img-responsive imclip" alt=""></a>
         </div>
-        <!--item end-->
-        <!--item start-->     <!--eng/cs-->
-        <div class="col-md-4 portfolio-item">
-          <div class="hover-bg"> <a href="quadruped.html"  data-lightbox-gallery="gallery1">
-            <div class="hover-text">
-              <div class="overlay-caption">
-                <div class="overlay-content">
-                  <h3>Mammalian Quadruped</h3>
-                </div>
+      </div>
+      <!--item end-->
+      <!--item start-->     <!--eng-->
+      <div class="col-md-4 portfolio-item">
+        <div class="hover-bg"> <a href="quadruped.html"  data-lightbox-gallery="gallery1">
+          <div class="hover-text">
+            <div class="overlay-caption">
+              <div class="overlay-content">
+                <h3>Mammalian Quadruped</h3>
               </div>
             </div>
-            <img src="images/projects/quadruped/full.png" class="img-responsive imclip" alt=""></a>
           </div>
+          <img src="images/projects/quadruped/full_thumbnail.png" class="img-responsive imclip" alt=""></a>
         </div>
-        <!--item end-->
-        <!--item start-->     <!--cs-->
-        <div class="col-md-4 portfolio-item">
-          <div class="hover-bg"> <a href="web_portfolio.html"  data-lightbox-gallery="gallery1">
-            <div class="hover-text">
-              <div class="overlay-caption">
-                <div class="overlay-content">
-                  <h3>Website Portfolio</h3>
-                </div>
+      </div>
+      <!--item end-->
+      <!--item start-->     <!--cs-->
+      <div class="col-md-4 portfolio-item">
+        <div class="hover-bg"> <a href="web_portfolio.html"  data-lightbox-gallery="gallery1">
+          <div class="hover-text">
+            <div class="overlay-caption">
+              <div class="overlay-content">
+                <h3>Website Portfolio</h3>
               </div>
             </div>
-            <img src="images/projects/website/Screen Shot 2020-10-04 at 12.02.59 AM.png" class="img-responsive imclip" alt=""></a>
           </div>
+          <img src="images/projects/website/Screen Shot 2020-10-04 at 12.02.59 AM_thumbnail.jpg" class="img-responsive imclip" alt=""></a>
         </div>
-        <!--item end-->
-
-
-
+      </div>
+      <!--item end-->
     </div>
 
     <!--portfolio end-->
