--- a/work.misc.html
+++ b/work.misc.html
@@ -82,7 +82,7 @@
               </div>
             </div>
           </div>
-          <img src="images/projects/misc_visual/globe/IMG_0634.jpg" class="img-responsive imclip" alt=""></a>
+          <img src="images/projects/misc_visual/globe/globe_small.jpg" class="img-responsive imclip" alt=""></a>
         </div>
       </div>
       <!--item end-->
@@ -96,80 +96,80 @@
               </div>
             </div>
           </div>
-          <img src="images/projects/misc_visual/log/cropped.jpg" class="img-responsive imclip" alt=""></a>
+          <img src="images/projects/misc_visual/log/cropped_thumbnail.jpg" class="img-responsive imclip" alt=""></a>
+        </div>
+      </div>
+      <!--item end-->
+      <!--item start-->     <!--visual/arch-->
+      <div class="col-md-4 portfolio-item">
+        <div class="hover-bg"> <a href="houses.html"  data-lightbox-gallery="gallery1">
+          <div class="hover-text">
+            <div class="overlay-caption">
+              <div class="overlay-content">
+                <h3>Housing Models</h3>
+              </div>
+            </div>
+          </div>
+          <img src="images/projects/experimentalhousing/5AD8D23E-1D5C-43BF-B89A-C242F86E1889_thumbnail.jpeg" class="img-responsive imclip" alt=""></a>
+        </div>
+      </div>
+      <!--item end-->
+      <!--item start-->     <!--visual/arch-->
+      <div class="col-md-4 portfolio-item">
+        <div class="hover-bg"> <a href="van.html"  data-lightbox-gallery="gallery1">
+          <div class="hover-text">
+            <div class="overlay-caption">
+              <div class="overlay-content">
+                <h3>Garden Camper</h3>
+              </div>
+            </div>
+          </div>
+          <img src="images/projects/van/C893012A-0C4B-4233-9551-79BA62B0D535_thumbnail.jpeg" class="img-responsive imclip" alt=""></a>
         </div>
       </div>
       <!--item end-->
       <!--item start-->     <!--visual-->
-        <div class="col-md-4 portfolio-item">
-          <div class="hover-bg"> <a href="houses.html"  data-lightbox-gallery="gallery1">
-            <div class="hover-text">
-              <div class="overlay-caption">
-                <div class="overlay-content">
-                  <h3>Housing Models</h3>
-                </div>
+      <div class="col-md-4 portfolio-item">
+        <div class="hover-bg"> <a href="lunchbox.html"  data-lightbox-gallery="gallery1">
+          <div class="hover-text">
+            <div class="overlay-caption">
+              <div class="overlay-content">
+                <h3>Lunchbox</h3>
               </div>
             </div>
-            <img src="images/projects/experimentalhousing/5AD8D23E-1D5C-43BF-B89A-C242F86E1889.jpeg" class="img-responsive imclip" alt=""></a>
           </div>
+          <img src="images/projects/lunchbox/lunchbox_small.jpg" class="img-responsive imclip" alt=""></a>
         </div>
-        <!--item end-->
-        <!--item start-->     <!--visual-->
-        <div class="col-md-4 portfolio-item">
-          <div class="hover-bg"> <a href="van.html"  data-lightbox-gallery="gallery1">
-            <div class="hover-text">
-              <div class="overlay-caption">
-                <div class="overlay-content">
-                  <h3>Garden Camper</h3>
-                </div>
+      </div>
+      <!--item end-->
+      <!--item start-->     <!--visual-->
+      <div class="col-md-4 portfolio-item">
+        <div class="hover-bg"> <a href="void.html"  data-lightbox-gallery="gallery1">
+          <div class="hover-text">
+            <div class="overlay-caption">
+              <div class="overlay-content">
+                <h3>Dominant Void</h3>
               </div>
             </div>
-            <img src="images/projects/van/C893012A-0C4B-4233-9551-79BA62B0D535.jpeg" class="img-responsive imclip" alt=""></a>
           </div>
+          <img src="images/projects/misc_visual/dominantvoid/IMG_2962_thumbnail.jpg" class="img-responsive imclip" alt=""></a>
         </div>
-        <!--item end-->
-        <!--item start-->     <!--visual-->
-        <div class="col-md-4 portfolio-item">
-          <div class="hover-bg"> <a href="lunchbox.html"  data-lightbox-gallery="gallery1">
-            <div class="hover-text">
-              <div class="overlay-caption">
-                <div class="overlay-content">
-                  <h3>Lunchbox</h3>
-                </div>
+      </div>
+      <!--item end-->
+      <!--item start-->     <!--visual-->
+      <div class="col-md-4 portfolio-item">
+        <div class="hover-bg"> <a href="rand.html"  data-lightbox-gallery="gallery1">
+          <div class="hover-text">
+            <div class="overlay-caption">
+              <div class="overlay-content">
+                <h3>Random Projects</h3>
               </div>
             </div>
-            <img src="images/projects/lunchbox/lunchbox_small.jpg" class="img-responsive imclip" alt=""></a>
           </div>
+          <img src="images/projects/misc_visual/rand/Screen Shot 2020-10-08 at 10.47.09 PM_thumbnail.png" class="img-responsive imclip" alt=""></a>
         </div>
-        <!--item end-->
-        <!--item start-->     <!--visual-->
-        <div class="col-md-4 portfolio-item">
-          <div class="hover-bg"> <a href="void.html"  data-lightbox-gallery="gallery1">
-            <div class="hover-text">
-              <div class="overlay-caption">
-                <div class="overlay-content">
-                  <h3>Dominant Void</h3>
-                </div>
-              </div>
-            </div>
-            <img src="images/projects/misc_visual/dominantvoid/IMG_2962.jpg" class="img-responsive imclip" alt=""></a>
-          </div>
-        </div>
-        <!--item end-->
-        <!--item start-->     <!--visual-->
-        <div class="col-md-4 portfolio-item">
-          <div class="hover-bg"> <a href="rand.html"  data-lightbox-gallery="gallery1">
-            <div class="hover-text">
-              <div class="overlay-caption">
-                <div class="overlay-content">
-                  <h3>Random Projects</h3>
-                </div>
-              </div>
-            </div>
-            <img src="images/projects/misc_visual/rand/Screen Shot 2020-10-08 at 10.47.09 PM.png" class="img-responsive imclip" alt=""></a>
-          </div>
-        </div>
-        <!--item end-->
+      </div>
+      <!--item end-->
 
 
 
