--- a/work.eng.html
+++ b/work.eng.html
@@ -72,104 +72,104 @@
     </nav>
 
     <div class="row">
-        <!--item start-->     <!--eng-->
-        <div class="col-md-4 portfolio-item">
-          <div class="hover-bg"> <a href="quadruped.html"  data-lightbox-gallery="gallery1">
-            <div class="hover-text">
-              <div class="overlay-caption">
-                <div class="overlay-content">
-                  <h3>Mammalian Quadruped</h3>
-                </div>
+      <!--item start-->     <!--eng-->
+      <div class="col-md-4 portfolio-item">
+        <div class="hover-bg"> <a href="quadruped.html"  data-lightbox-gallery="gallery1">
+          <div class="hover-text">
+            <div class="overlay-caption">
+              <div class="overlay-content">
+                <h3>Mammalian Quadruped</h3>
               </div>
             </div>
-            <img src="images/projects/quadruped/full.png" class="img-responsive imclip" alt=""></a>
           </div>
+          <img src="images/projects/quadruped/full_thumbnail.png" class="img-responsive imclip" alt=""></a>
         </div>
-        <!--item end-->
-        <!--item start-->     <!--cs/eng-->
-        <div class="col-md-4 portfolio-item">
-          <div class="hover-bg"> <a href="machine_learning.html"  data-lightbox-gallery="gallery1">
-            <div class="hover-text">
-              <div class="overlay-caption">
-                <div class="overlay-content">
-                  <h3>Machine Learning</h3>
-                </div>
+      </div>
+      <!--item end-->
+      <!--item start-->     <!--cs/eng-->
+      <div class="col-md-4 portfolio-item">
+        <div class="hover-bg"> <a href="melanoma.html"  data-lightbox-gallery="gallery1">
+          <div class="hover-text">
+            <div class="overlay-caption">
+              <div class="overlay-content">
+                <h3>Melanoma Research</h3>
               </div>
             </div>
-            <img src="images/projects/machine_learning/07_96_2470_gt.jpg" class="img-responsive imclip" alt=""></a>
           </div>
+          <img src="images/projects/melanoma/07_96_2470_gt.jpg" class="img-responsive imclip" alt=""></a>
         </div>
-        <!--item end-->
-        <!--item start-->     <!--arch/eng-->
-        <div class="col-md-4 portfolio-item">
-          <div class="hover-bg"> <a href="campsite_struct.html"  data-lightbox-gallery="gallery1">
-            <div class="hover-text">
-              <div class="overlay-caption">
-                <div class="overlay-content">
-                  <h3>Campsite Kit</h3>
-                </div>
+      </div>
+      <!--item end-->
+      <!--item start-->     <!--arch/eng-->
+      <div class="col-md-4 portfolio-item">
+        <div class="hover-bg"> <a href="campsite_struct.html"  data-lightbox-gallery="gallery1">
+          <div class="hover-text">
+            <div class="overlay-caption">
+              <div class="overlay-content">
+                <h3>Campsite Kit</h3>
               </div>
             </div>
-            <img src="images/projects/nomad_campsite/axon plan.jpg" class="img-responsive imclip" alt=""></a>
           </div>
+          <img src="images/projects/nomad_campsite/axon plan.jpg" class="img-responsive imclip" alt=""></a>
         </div>
-        <!--item end-->
-        <!--item start-->     <!--eng-->
-        <div class="col-md-4 portfolio-item">
-          <div class="hover-bg"> <a href="surgical_retractor.html"  data-lightbox-gallery="gallery1">
-            <div class="hover-text">
-              <div class="overlay-caption">
-                <div class="overlay-content">
-                  <h3>Orthopedic Surgical Retractor</h3>
-                </div>
+      </div>
+      <!--item end-->
+      <!--item start-->     <!--eng-->
+      <div class="col-md-4 portfolio-item">
+        <div class="hover-bg"> <a href="surgical_retractor.html"  data-lightbox-gallery="gallery1">
+          <div class="hover-text">
+            <div class="overlay-caption">
+              <div class="overlay-content">
+                <h3>Orthopedic Surgical Retractor</h3>
               </div>
             </div>
-            <img src="images/projects/surgical_retractor/AAClampV5_10.PNG" class="img-responsive imclip" alt=""></a>
           </div>
+          <img src="images/projects/surgical_retractor/AAClampV5_10.PNG" class="img-responsive imclip" alt=""></a>
         </div>
-        <!--item end-->
-        <!--item start-->     <!--arch/eng-->
-        <div class="col-md-4 portfolio-item">
-          <div class="hover-bg"> <a href="escuelaSUP.html"  data-lightbox-gallery="gallery1">
-            <div class="hover-text">
-              <div class="overlay-caption">
-                <div class="overlay-content">
-                  <h3>Resilient Design</h3>
-                </div>
+      </div>
+      <!--item end-->
+      <!--item start-->     <!--arch/eng-->
+      <div class="col-md-4 portfolio-item">
+        <div class="hover-bg"> <a href="escuelaSUP.html"  data-lightbox-gallery="gallery1">
+          <div class="hover-text">
+            <div class="overlay-caption">
+              <div class="overlay-content">
+                <h3>Resilient Design</h3>
               </div>
             </div>
-            <img src="images/projects/escuelaSUP/ESUP_small.jpg" class="img-responsive imclip" alt=""></a>
           </div>
+          <img src="images/projects/escuelaSUP/ESUP_small.jpg" class="img-responsive imclip" alt=""></a>
         </div>
-        <!--item end-->
-        <!--item start-->     <!--eng-->
-        <div class="col-md-4 portfolio-item">
-          <div class="hover-bg"> <a href="microfluidics.html"  data-lightbox-gallery="gallery1">
-            <div class="hover-text">
-              <div class="overlay-caption">
-                <div class="overlay-content">
-                  <h3>Microfluidic Experiments</h3>
-                </div>
+      </div>
+      <!--item end-->
+      <!--item start-->     <!--eng-->
+      <div class="col-md-4 portfolio-item">
+        <div class="hover-bg"> <a href="microfluidics.html"  data-lightbox-gallery="gallery1">
+          <div class="hover-text">
+            <div class="overlay-caption">
+              <div class="overlay-content">
+                <h3>Microfluidic Experiments</h3>
               </div>
             </div>
-            <img src="images/projects/microfluidics/microfluidicsetup.jpg" class="img-responsive imclip" alt=""></a>
           </div>
+          <img src="images/projects/microfluidics/microfluidicsetup.jpg" class="img-responsive imclip" alt=""></a>
         </div>
-        <!--item end-->
-        <!--item start-->     <!--eng-->
-        <div class="col-md-4 portfolio-item">
-          <div class="hover-bg"> <a href="skateboard.html"  data-lightbox-gallery="gallery1">
-            <div class="hover-text">
-              <div class="overlay-caption">
-                <div class="overlay-content">
-                  <h3>Electric Longboard</h3>
-                </div>
+      </div>
+      <!--item end-->
+      <!--item start-->     <!--eng-->
+      <div class="col-md-4 portfolio-item">
+        <div class="hover-bg"> <a href="skateboard.html"  data-lightbox-gallery="gallery1">
+          <div class="hover-text">
+            <div class="overlay-caption">
+              <div class="overlay-content">
+                <h3>Electric Longboard</h3>
               </div>
             </div>
-            <img src="images/projects/skateboard/board_front.jpg" class="img-responsive imclip" alt=""></a>
           </div>
+          <img src="images/projects/skateboard/board_front.jpg" class="img-responsive imclip" alt=""></a>
         </div>
-        <!--item end-->
+      </div>
+      <!--item end-->
 
     </div>
 
