random cv update

--- a/quadruped.html
+++ b/quadruped.html
@@ -73,6 +73,9 @@
         An original meta-learning approach was employed to speed training.
       </p>
     </div>
+    <img src="images/projects/quadruped/planetary_large.PNG" class="centerbasic">
+    <img src="images/projects/quadruped/gearbox_large.PNG" class="centerbasic">
+    <img src="images/projects/quadruped/hip+leg_v16.jpg" class="centerbasic">
     <img src="images/projects/quadruped/iktest.gif" class="centerbasic">
     <img src="images/projects/quadruped/leg.png" class="centerbasic">
     <img src="images/projects/quadruped/hip.png" class="centerbasic">
